# claude-rag

./: .gitignore  CHANGELOG.md  CLAUDE.md  HOW-TO-USE.md  README.md  claude-rag  claude-rag-plan.md  claude_rag_sessionend_hook.sh  com.clauderag.nightly.plist  ingest_export.py  ingest_files.py  ingest_knowledge.py  ingest_transcript.py  nightly.sh  pyproject.toml
src/claude_rag/: core.py  mcp_server.py
