[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "claude-rag"
version = "0.1.0"
description = "Local-first RAG + memory system for Claude Code"
requires-python = ">=3.11"
dependencies = [
    "lancedb>=0.17",
    "openai>=1.0",            # LM Studio exposes an OpenAI-compatible endpoint
    "pydantic>=2.0",
    "pymupdf4llm>=0.0.17",    # PDF text extraction with structure preservation
    "python-dateutil>=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
